Fix item (group) gap

--- a/src/components/ActionBar/ActionBarItem/index.scss
+++ b/src/components/ActionBar/ActionBarItem/index.scss
@@ -2,4 +2,5 @@
     padding: .25rem;
     display: flex;
     justify-content: center;
+    gap: .25rem;
 }
